# Python-Checkers-AI

./: README.md  main.py  optimal_parameters.py  pyproject.toml
checkers/: board.py  constants.py  game.py  move.py  piece.py
heuristic_stats/: coup-par-coup.csv  gagnant-perdant.csv  strategy.md
minimax/: algorithm.py
montecarlo/: algorithm.py
